--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.0.0",
 		"date-fns": "^2.30.0",
+		"embla-carousel-autoplay": "8.0.0-rc17",
+		"embla-carousel-react": "8.0.0-rc17",
 		"lucide-react": "^0.288.0",
 		"next": "14.0.3",
 		"next-safe-action": "^5.2.1",
